deploy: 8110c2464352339978f288db04b759aa1e7c3ece

--- a/genindex.html
+++ b/genindex.html
@@ -162,6 +162,7 @@
  <a href="#A"><strong>A</strong></a>
  | <a href="#C"><strong>C</strong></a>
  | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
  | <a href="#L"><strong>L</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -215,6 +216,14 @@
       <li><a href="src.htcondor_es.html#src.htcondor_es.AffiliationManager.AffiliationManager.getAffiliation">getAffiliation() (src.htcondor_es.AffiliationManager.AffiliationManager method)</a>
 </li>
       <li><a href="src.htcondor_es.html#src.htcondor_es.utils.grouper">grouper() (in module src.htcondor_es.utils)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="src.htcondor_es.html#src.htcondor_es.utils.helper_condor_hist_query">helper_condor_hist_query() (in module src.htcondor_es.utils)</a>
 </li>
   </ul></td>
 </tr></table>
