--- a/_modules/src/htcondor_es/utils.html
+++ b/_modules/src/htcondor_es/utils.html
@@ -382,6 +382,35 @@
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">args</span> <span class="o">=</span> <span class="p">[</span><span class="nb">iter</span><span class="p">(</span><span class="n">iterable</span><span class="p">)]</span> <span class="o">*</span> <span class="n">n</span>
     <span class="k">return</span> <span class="n">zip_longest</span><span class="p">(</span><span class="o">*</span><span class="n">args</span><span class="p">,</span> <span class="n">fillvalue</span><span class="o">=</span><span class="n">fillvalue</span><span class="p">)</span></div>
+
+
+<div class="viewcode-block" id="helper_condor_hist_query"><a class="viewcode-back" href="../../../src.htcondor_es.html#src.htcondor_es.utils.helper_condor_hist_query">[docs]</a><span class="k">def</span> <span class="nf">helper_condor_hist_query</span><span class="p">(</span><span class="n">collectors_file</span><span class="p">,</span> <span class="n">schedd_name</span><span class="p">,</span> <span class="n">query</span><span class="o">=</span><span class="s2">&quot;&quot;</span><span class="p">,</span> <span class="n">limit</span><span class="o">=</span><span class="mi">1</span><span class="p">):</span>
+    <span class="sd">&quot;&quot;&quot;Get raw ClassAd for testing purpose</span>
+
+<span class="sd">    Sometimes we may need to see raw ClassAd. This function helps to print a raw ClassAd with queries.</span>
+<span class="sd">    You may find all schedds in `schedd_ads` list or &quot;ScheddName&quot; field in condor data in ES/Kibana.</span>
+
+<span class="sd">    Args:</span>
+<span class="sd">        schedd_name (str): Schedd name.</span>
+<span class="sd">        collectors_file (str): Collectors file name.</span>
+<span class="sd">        query (str): htcondor constraints query.</span>
+<span class="sd">        limit (int): Limit of the results.</span>
+
+<span class="sd">    Examples:</span>
+<span class="sd">        custom_condor_hist_query(collectors_file=&quot;y&quot;,</span>
+<span class="sd">                         schedd_name=&quot;x&quot;,</span>
+<span class="sd">                         query=&#39;&#39;&#39;MachineAttrCMSProcessingSiteName0 == &quot;zzzz&quot;&#39;&#39;&#39;,</span>
+<span class="sd">                         limit=1)</span>
+<span class="sd">    &quot;&quot;&quot;</span>
+    <span class="c1"># &quot;secrets/cms-htcondor-es/collectors&quot;</span>
+    <span class="n">schedd_ads</span> <span class="o">=</span> <span class="n">get_schedds_from_file</span><span class="p">(</span><span class="kc">None</span><span class="p">,</span> <span class="n">collectors_file</span><span class="o">=</span><span class="n">collectors_file</span><span class="p">)</span>
+    <span class="nb">print</span><span class="p">(</span><span class="n">schedd_ads</span><span class="p">)</span>
+    <span class="n">idx</span> <span class="o">=</span> <span class="p">[</span><span class="n">i</span> <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">r</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">schedd_ads</span><span class="p">)</span> <span class="k">if</span> <span class="p">(</span><span class="n">schedd_name</span> <span class="ow">in</span> <span class="n">r</span><span class="o">.</span><span class="n">get</span><span class="p">(</span><span class="s2">&quot;Name&quot;</span><span class="p">))][</span><span class="mi">0</span><span class="p">]</span>
+    <span class="n">schedd</span> <span class="o">=</span> <span class="n">htcondor</span><span class="o">.</span><span class="n">Schedd</span><span class="p">(</span><span class="n">schedd_ads</span><span class="p">[</span><span class="n">idx</span><span class="p">])</span>
+    <span class="nb">print</span><span class="p">(</span><span class="n">schedd</span><span class="p">)</span>
+    <span class="n">query_iter</span> <span class="o">=</span> <span class="n">schedd</span><span class="o">.</span><span class="n">history</span><span class="p">(</span><span class="n">constraint</span><span class="o">=</span><span class="n">query</span><span class="p">,</span> <span class="n">projection</span><span class="o">=</span><span class="p">[],</span> <span class="n">match</span><span class="o">=</span><span class="n">limit</span><span class="p">)</span>
+    <span class="k">for</span> <span class="n">r</span> <span class="ow">in</span> <span class="n">query_iter</span><span class="p">:</span>
+        <span class="nb">print</span><span class="p">(</span><span class="n">r</span><span class="p">)</span></div>
 </pre></div>
 
            </div>
